--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     background-position: top center;
     background-size: cover; */
    background: var(--bg-url) no-repeat top center/cover;
+   height: 100vh;
 }
 
 body * {
@@ -161,4 +162,15 @@ footer {
     padding: 24px 0;
     text-align: center;
     font-size: 14px;
+}
+
+/* media queries*/
+@media (:-moz-width: 700px){
+    :root{
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light{
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
 }
